SUBDIRS = types

EXTRA_DIST = main_icon.png lterm-small.png terminal_32.png duplicate.png keys-64.png user.png \
             plus.png less.png pencil.png copy.png folder.png post-it.png \
             upload.png download.png directory_16.png file_16.png sidebar.png \
             splitH.png splitV.png regroup.png cluster.png preferences.png transfers.png folder_up.png \
             folder_new.png home.png file_new.png rename.png

imgdir = $(datadir)/$(PACKAGE)/img
img_DATA = main_icon.png lterm-small.png terminal_32.png duplicate.png keys-64.png user.png plus.png \
           less.png pencil.png copy.png folder.png post-it.png \
           upload.png download.png directory_16.png file_16.png sidebar.png \
           splitH.png splitV.png regroup.png cluster.png preferences.png transfers.png folder_up.png \
           folder_new.png home.png file_new.png rename.png
