DEFS = -DLOCALEDIR=\"$(datadir)/locale\" -DIMGDIR=\"$(datadir)/$(PACKAGE)/img\" -DPKGDATADIR=\"$(datadir)/$(PACKAGE)/data\" @DEFS@

bin_PROGRAMS = lterm
lterm_SOURCES = \
  config.h \
  connection.c connection.h \
  gui.c gui.h \
  main.c main.h \
  preferences.c preferences.h \
  profile.c profile.h \
  protocol.c protocol.h \
  utils.c utils.h \
  grouptree.h grouptree.c \
  connection_list.h connection_list.c \
  xml.h xml.c \
  sftp-panel.c sftp-panel.h \
  ssh.c ssh.h \
  terminal.h terminal.c \
  async.h async.c \
  transfer_window.h transfer_window.c
